--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   go_router: ^6.0.1
   intl: ^0.18.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
