chore: improve models to use Equatable, new widgets and ProductPage flows

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,12 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   go_router: ^6.0.1
   intl: ^0.18.0
+  loading_animation_widget: ^1.2.0+4
   provider: ^6.0.5
 
 dev_dependencies:
