--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=2.18.5 <3.0.0'
 
 dependencies:
+  auto_animated: ^3.1.0
+  brasil_fields: ^1.10.0
   cupertino_icons: ^1.0.2
   diacritic: ^0.1.3
   dio: ^4.0.6
