--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   diacritic: ^0.1.3
   dio: ^4.0.6
+  either_dart: ^0.3.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  get_it: ^7.2.0
   go_router: ^6.0.1
   google_fonts: ^4.0.1
   intl: ^0.18.0
