chore: update dio and update project naming

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Startto's Menu",
-    "short_name": "Startto's Menu",
+    "name": "Felipo's Menu",
+    "short_name": "Felipo's Menu",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
