--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  get: ^4.6.5
   get_it: ^7.2.0
-  go_router: ^6.0.1
   google_fonts: ^4.0.1
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
