--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   brasil_fields: ^1.10.0
   cupertino_icons: ^1.0.2
   diacritic: ^0.1.3
-  dio: ^4.0.6
+  dio: ^5.0.1
   either_dart: ^0.3.0
   equatable: ^2.0.5
   flutter:
@@ -20,6 +20,7 @@ dependencies:
   google_fonts: ^4.0.1
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
